# Bookmaker

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  tasks.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  python-app.yml
install/: config-docker.py  config.test
ressources/: bookmaker.service
src/: __init__.py
src/api/: GestionFile.py  Gestion_Match.py  Joueur_BDD.py  Match_BDD.py  Paris_BDD.py  Restricted.py  Saisons_BDD.py  api_bdd.py  button.py  telegram_decorateur.py
src/plugins/admin_user/: admin_user.py
src/plugins/bonjour/: bonjour.py
src/plugins/classement/: classement.py
src/plugins/gestion_match/: gestion_match.py  match_tool.py
src/plugins/gestion_saisons/: gestion_saisons.py  saison_tool.py
src/plugins/log/: log.py
src/plugins/paris/: paris.py  paris_conv_add.py  paris_conv_modif.py  paris_tool.py
src/plugins/regle/: regle.py
test/install/: config.test
