[tool.poetry]
name = "bookmaker"
version = "0.1.0"
description = "Bot telegram permettant de faire des paris rugbystiques entre amis"
authors = ["michael <michael@mic-rigaud.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.14"
invoke = "^1.7.3"
peewee = "^3.15.3"
requests = "^2.28.1"
config = "^0.5.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.10.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
